GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Line_Item__c/Service_Request_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Service Request Line Item</label>
    <nameField>
        <displayFormat>SRLI-{000000}</displayFormat>
        <label>Service Request Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>