GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Line_Item__c/fields/Account_Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Account_Product_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Product Service</label>
    <referenceTo>Account_Product_Service__c</referenceTo>
    <relationshipLabel>Service Requests Line Item</relationshipLabel>
    <relationshipName>Service_Requests_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>