GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Line_Item__c/fields/Cancel_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Cancel_DateTime__c</fullName>
    <label>Cancel DateTime</label>
    <type>DateTime</type>
</CustomField>