GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Line_Item__c/fields/Intake_Request__c.field-meta.xml
<CustomField>
    <fullName>Intake_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Service Requests Line Item</relationshipLabel>
    <relationshipName>Service_Requests_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>