GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Line_Item__c/fields/Missing_Pages__c.field-meta.xml
<CustomField>
    <fullName>Missing_Pages__c</fullName>
    <label>Missing Pages</label>
    <type>TextArea</type>
</CustomField>