GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Line_Item__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Document Received</fullName>
            </value>
            <value>
                <fullName>Partial Document Received</fullName>
            </value>
            <value>
                <fullName>No Records</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Incorrect Document Received</fullName>
            </value>
            <value>
                <fullName>Complete-Withdrawn</fullName>
                <isActive>false</isActive>
                <label>Complete-Withdrawn</label>
            </value>
            <value>
                <fullName>Complete-Withdrawn-Bill</fullName>
                <isActive>false</isActive>
                <label>Complete-Withdrawn-Bill</label>
            </value>
            <value>
                <fullName>Complete-Withdrawn-Full</fullName>
                <isActive>false</isActive>
                <label>Complete-Withdrawn-Full</label>
            </value>
            <value>
                <fullName>Terminate</fullName>
                <isActive>false</isActive>
                <label>Terminate</label>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
                <isActive>false</isActive>
                <label>Withdrawn</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>