GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Line_Item__c/fields/Retry_Count_left__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count_left__c</fullName>
    <formula>Service_Request__r.Follow_up_Retry_Attempts_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow-up Retry Attempts Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>