GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Line_Item__c/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <formula>Service__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Service Name</inlineHelpText>
    <label>Service Name</label>
    <type>Text</type>
</CustomField>