GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Line_Item__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Service Requests Line Item</relationshipLabel>
    <relationshipName>Service_Requests_Line_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>