GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Line_Item__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <formula>Account_Product_Service__r.ServiceType__c</formula>
    <label>Service Type</label>
    <type>Text</type>
</CustomField>