GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Line_Item__c/fields/Service_Type_Coversheet__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Coversheet__c</fullName>
    <description>Formula field to change MDS initial to Full Admission MDS and Nurse Assessment to Assessment/Oasis for coversheet output</description>
    <formula>IF(Account_Product_Service__r.ServiceType__c = &quot;MDS - Initial&quot;, &quot;Full Admission MDS&quot;, IF(Account_Product_Service__r.ServiceType__c= &quot;Nursing Assessment&quot;, &quot;Assessment/Oasis&quot;, Account_Product_Service__r.ServiceType__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Type Coversheet</label>
    <type>Text</type>
</CustomField>