GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Line_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Documents Received</fullName>
            </value>
            <value>
                <fullName>QA In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
                <isActive>false</isActive>
                <label>Cancel</label>
            </value>
            <value>
                <fullName>QAComplete</fullName>
                <isActive>false</isActive>
                <label>QAComplete</label>
            </value>
            <value>
                <fullName>Received</fullName>
                <isActive>false</isActive>
                <label>Received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>