GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Line_Item__c/validationRules/Partial_Documents_Received.validationRule-meta.xml
<ValidationRule>
    <fullName>Partial_Documents_Received</fullName>
    <active>true</active>
    <description>Missing pages and Note are required if Reason Code is Partial Document Received</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Reason_Code__c, &apos;Partial Document Received&apos;), 
OR( 
ISBLANK(Missing_Pages__c), ISBLANK(Note__c) 
) 
)</errorConditionFormula>
    <errorMessage>Missing pages/Notes is required when Reason Code is Partial Documents Received</errorMessage>
</ValidationRule>