GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Request__c</columns>
    <columns>Account_Product_Service__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>